# pdf-graphrag

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/api/: main.py
backend/src/api/routes/: chat.py  extraction.py  review.py  similarity.py  upload.py  validation.py
backend/src/chat/: __init__.py  graphrag_qa.py
backend/src/core/: config.py  storage.py
backend/src/extraction/: __init__.py  jump_engine.py  pipeline.py  schemas.py  tier1_rules.py  tier2_llm.py  toxic_rules.py
backend/src/graph/: __init__.py  builder.py  client.py  schema.cypher
backend/src/llm/: __init__.py  base.py  factory.py  openai_client.py  vllm_client.py
backend/src/parsing/: __init__.py  pdf_loader.py  table_parser.py  toc_extractor.py
backend/src/review/: __init__.py  store.py
backend/src/scripts/: benchmark.py
backend/src/similarity/: __init__.py  embedding.py  project_matcher.py
backend/src/validation/: __init__.py  dependency_check.py
backend/tests/: test_jump_engine.py
data/past_projects/: project_A.json  project_B.json  project_C.json  project_D.json
data/standards/: company_std.ko.json
docs/: architecture.md  benchmarks.md  llm_abstraction.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  DependencyReport.tsx  ExtractionTable.tsx  PDFUploader.tsx  ReferencesView.tsx  ReviewPanel.tsx  SimilarProjects.tsx
