[project]
name = "pdf-graphrag-backend"
version = "0.1.0"
description = "PDF GraphRAG portfolio MVP - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "neo4j>=5.25.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

# Phase 2 extras kept out of base to keep the Phase 1 image lean.
[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.2.0",
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
]
tables-camelot = [
    "camelot-py[cv]>=0.11.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
